src/components/Navbar.css
@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');

#Nav .MuiContainer-maxWidthXl {
    display: flex;
    align-items: center;
    width: 100%;
    max-width: 100%;
    padding: 0 10%;
}

.navbar-logo {
    width: 80px;
    height: auto;
}

.navbar-icon {
    width: 30px;
    height: auto;
    padding-left: 50px;
}

.navbar-default .MuiContainer-maxWidthXl {
    background-color: #fffde6;
}

.navbar-default .MuiButton-root {
    color: #051a6f;
}

.navbar-kickingbrass .MuiContainer-maxWidthXl {
    background-color: #1b0c2e !important;
}

.navbar-kickingbrass .MuiButton-root {
    color: #ffe690 !important;
}

#Nav .MuiToolbar-root {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding: 8px 0;
}

#Nav .MuiBox-root {
    display: flex;
    flex-grow: 1;
    justify-content: flex-end;
}

#Nav .MuiButton-root {
    margin: 0 10px;
    font-family: 'Maven Pro', sans-serif;
    color: #051a6f;
}

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    display: none;
    cursor: pointer;
    position: relative;
    width: 30px;
    height: 23px;
}

.nav-toggle-label span {
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    background: #051a6f;
    border-radius: 3px;
    opacity: 1;
    left: 0;
    transition: all 0.3s ease-in-out;
}

.nav-toggle-label span:nth-child(1) {
    top: 0px;
}

.nav-toggle-label span:nth-child(2) {
    top: 10px;
}

.nav-toggle-label span:nth-child(3) {
    top: 20px;
}

.navbar-kickingbrass {
    background-color: #1b0c2e;
}

.navbar-kickingbrass .navbar-logo {
    filter: invert(100%);
}

.navbar-kickingbrass .MuiButton-root,
.navbar-kickingbrass .nav-toggle-label span {
    color: #fffde6;
}

.navbar-kickingbrass .nav-toggle-label span {
    background: #ffe690;
}

@media (max-width: 750px) {
    .navbar-logo {
        width: 50px;
        height: auto;
    }

    .nav-toggle {
        display: none;
    }

    #Nav .MuiBox-root {
        flex-wrap: wrap;
        display: flex;
        width: 85%;
        font-size: larger;
        flex-grow: 1;
        justify-content: space-between;
        align-items: center;
    }

    .nav-toggle-label {
        display: block;
        position: absolute;
        top: 30px;
        right: 10px;
        z-index: 2;
    }

    .nav-toggle:checked~.nav-items {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    .nav-items {
        display: none;
        opacity: 0;
        visibility: hidden;
    }

    .nav-toggle:checked~.nav-items {
        opacity: 1;
        visibility: visible;
    }

    .nav-toggle:checked~.nav-icons {
        background-color: aqua;
    }

    .nav-toggle:checked~.nav-toggle-label span:nth-child(1) {
        top: 0px;
        left: 10px;
    }

    .nav-toggle:checked~.nav-toggle-label span:nth-child(2) {
        top: 10px;
        left: 5px;
    }

    .nav-toggle:checked~.nav-toggle-label span:nth-child(3) {
        top: 20px;
    }
}

